--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>toof</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>toof</title>
+  </head>
 
-<body>
-<h1>toof</h1>
-<a href="https://twitter.com/toof_jp">Twitter</a>
-
-</body>
+  <body>
+    <h1>toof</h1>
+    <a href="https://twitter.com/toof_jp">Twitter</a><br>
+    <a href="https://beta.atcoder.jp/users/toof">AtCoder</a>
+  </body>
 </html>
