--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>toof</h1>
     <a href="https://twitter.com/toof_jp">Twitter</a><br>
-    <a href="https://github.com/toof-jp">GitHub</a>
+    <a href="https://github.com/toof-jp">GitHub</a><br>
     <a href="https://beta.atcoder.jp/users/toof">AtCoder</a>
   </body>
 </html>
