--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
   <body>
     <h1>toof</h1>
-    <a href="https://twitter.com/toof_jp">Twitter</a><br>
-    <a href="https://github.com/toof-jp">GitHub</a><br>
-    <a href="https://beta.atcoder.jp/users/toof">AtCoder</a>
+    <p>
+    Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a><br>
+    GitHub: <a href="https://github.com/toof-jp">toof-jp</a><br>
+    AtCoder: <a href="https://beta.atcoder.jp/users/toof">toof</a>
+    </p>
   </body>
 </html>
