update atcoder url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>
     Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a><br>
     GitHub: <a href="https://github.com/toof-jp">toof-jp</a><br>
-    AtCoder: <a href="https://beta.atcoder.jp/users/toof">toof</a><br>
+    AtCoder: <a href="https://atcoder.jp/users/toof">toof</a><br>
     Codeforces: <a href="http://codeforces.com/profile/toof">toof</a>
     </p>
   </body>
