--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a><br>
     GitHub: <a href="https://github.com/toof-jp">toof-jp</a><br>
     AtCoder: <a href="https://atcoder.jp/users/toof">toof</a><br>
-    Codeforces: <a href="http://codeforces.com/profile/toof">toof</a>
+    Codeforces: <a href="http://codeforces.com/profile/toof">toof</a><br>
     yukicoder: <a href="https://yukicoder.me/users/6284">toof</a>
     </p>
   </body>
