--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>toof</title>
   </head>
 
   <body>
     <h1>toof</h1>
     <p>
-    Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a><br>
-    GitHub: <a href="https://github.com/toof-jp">toof-jp</a><br>
-    AtCoder: <a href="https://atcoder.jp/users/toof">toof</a><br>
-    Codeforces: <a href="https://codeforces.com/profile/toof">toof</a><br>
-    yukicoder: <a href="https://yukicoder.me/users/6284">toof</a>
+      Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a>
+    </p>
+    <p>
+      GitHub: <a href="https://github.com/toof-jp">toof-jp</a>
+    </p>
+    <p>
+      AtCoder: <a href="https://atcoder.jp/users/toof">toof</a>
+    </p>
+    <p>
+      Codeforces: <a href="https://codeforces.com/profile/toof">toof</a>
+    </p>
+    <p>
+      yukicoder: <a href="https://yukicoder.me/users/6284">toof</a>
     </p>
   </body>
 </html>
