CSSをhtmlファイルに移動

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style type="text/css">
+      body {
+        width: 600px;
+        margin: 0 auto;
+      }
+    </style>
     <title>toof</title>
   </head>
 
