--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       body {
         width: 600px;
         margin: 0 auto;
+        padding: 0 10px;
       }
     </style>
     <title>toof</title>
