--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style type="text/css">
       body {
-        width: 600px;
+        max-width: 600px;
         margin: 0 auto;
         padding: 0 10px;
       }
