--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style type="text/css">
+      html {
+        font-family: sans-serif;
+      }
+
       body {
         max-width: 600px;
         margin: 0 auto;
