--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="toof">
-    <style type="text/css">
+    <style>
       html {
         font-family: sans-serif;
       }
