--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       GitHub: <a href="https://github.com/toof-jp">toof-jp</a>
     </p>
     <p>
+      Misskey: <a href="https://misskey.cloud/@toof">@toof@misskey.cloud</a>
+    </p>
+    <p>
       AtCoder: <a href="https://atcoder.jp/users/toof">toof</a>
     </p>
     <p>
