--- a/index.html
+++ b/index.html
@@ -19,24 +19,30 @@
   </head>
 
   <body>
-    <h1>toof</h1>
-    <p>
+    <h1>toof.jp</h1>
+    <h2>links</h2>
+    <ul>
+    <li>
       Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a>
-    </p>
-    <p>
+    </li>
+    <li>
       GitHub: <a href="https://github.com/toof-jp">toof-jp</a>
-    </p>
-    <p>
+    </li>
+    <li>
+      Discord: @toof_jp
+    </li>
+    <li>
       Misskey: <a href="https://misskey.cloud/@toof">@toof@misskey.cloud</a>
-    </p>
-    <p>
+    </li>
+    <li>
       AtCoder: <a href="https://atcoder.jp/users/toof">toof</a>
-    </p>
-    <p>
+    </li>
+    <li>
       Codeforces: <a href="https://codeforces.com/profile/toof">toof</a>
-    </p>
-    <p>
+    </li>
+    <li>
       yukicoder: <a href="https://yukicoder.me/users/6284">toof</a>
-    </p>
+    </li>
+    </ul>
   </body>
 </html>
