--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         margin: 0 auto;
         padding: 0 10px;
       }
+
+      img {
+        max-width: 300px;
+        margin: auto;
+      }
     </style>
     <title>toof</title>
   </head>
 
   <body>
     <h1>toof.jp</h1>
+    <img src="icon.png">
     <h2>links</h2>
     <ul>
     <li>
