--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <h2>links</h2>
     <ul>
     <li>
+      Blog: <a href="https://blog.toof.jp">blog.toof.jp</a>
+    </li>
+    <li>
       Twitter: <a href="https://twitter.com/toof_jp">@toof_jp</a>
     </li>
     <li>
