feat: add hatena id and delete discord id

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       GitHub: <a href="https://github.com/toof-jp">toof-jp</a>
     </li>
     <li>
-      Discord: @toof_jp
+      Hatena: <a href="https://profile.hatena.ne.jp/toof_jp/">id:toof_jp</a>
     </li>
     <li>
       Misskey: <a href="https://misskey.cloud/@toof">@toof@misskey.cloud</a>
