--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <h2>links</h2>
     <ul>
     <li>
+      PGP: <a href="FF763AEB6BD4A524-2025-07-29.asc">FF763AEB6BD4A524-2025-07-29.asc</a>
+    </li>
+    <li>
       Blog: <a href="https://blog.toof.jp">blog.toof.jp</a>
     </li>
     <li>
@@ -39,6 +42,9 @@
     </li>
     <li>
       Hatena: <a href="https://profile.hatena.ne.jp/toof_jp/">id:toof_jp</a>
+    </li>
+    <li>
+      Bluesky: <a href="https://bsky.app/profile/toof.jp">@toof.jp</a>
     </li>
     <li>
       Misskey: <a href="https://misskey.cloud/@toof">@toof@misskey.cloud</a>
